# fourmind

./: .env.example  .gitignore  .pre-commit-config.yaml  .template.env  DockerFile  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tag-main.yml
bot/: FourMind.py  __init__.py  four_mind.py  main.py
bot/common/: LoggerFactory.py  MessageFactory.py  __init__.py  logger_factory.py
bot/interfaces/: BaseHandler.py  __init__.py
bot/models/: chat.py  objectives.py  output.py  storage.py
bot/services/ai/: MessageAnalyzer.py  Objective.py  QueueProcessor.py  ResponseGenerator.py  __init__.py  llm_inference.py  models.py  prompts.py  queue_processor.py  response_generator.py
bot/services/ai/prompts/: FSA.py  GAME.py  QP.py  RG.py  __init__.py  behavior.py
bot/services/simulation/: message_time_simulator.py
bot/services/storage/: StorageHandler.py  __init__.py  storage_handler.py
data/: chat_04818219.json  chat_05532943.json  chat_05740857.json  chat_08672092.json  chat_16569126.json  chat_16724519.json  chat_16914600.json  chat_17983017.json  chat_21579305.json  chat_33838038.json  chat_36018488.json  chat_40081863.json  chat_44378476.json  chat_53286621.json  chat_65400806.json  chat_66343760.json  chat_66557730.json  chat_69666323.json  chat_89746321.json  chat_99085505.json  chat_example01.json  chat_example02.json
dev/: foursidesanalysis.ipynb  response_time_formula.ipynb
doc/: architecture.plantuml  fourmind_architecture_diagram.plantuml  message_processing.plantuml
examples/chats/: sample-1.json  sample-2.json  sample-3.json  sample-4.json  sample-5.json
experiment/: analysis.ipynb  data.json  daten_severin_20250901.json  models.py
experiment/classification/: README.md  analysis.ipynb  classification.ipynb  classifier_state_dict.pth  data-preprocessing.ipynb  player_message_scores.json  player_messages.json
experiment/training/: bow.ipynb  data-preprocessing.ipynb
src/fourmind/bot/: client.py
src/fourmind/bot/models/: chat.py  inference.py  storage.py
src/fourmind/bot/services/: llm_inference.py  prompts.py
src/fourmind/bot/services/analysis/: four_sides.py
src/fourmind/bot/services/response_generation/: lookahead.py  message_time_simulator.py
src/fourmind/bot/services/storage/: storage_handler.py
