[project]
name = "fourmind"
version = "1.0.0"
description = "A objective-driven, simulation-based LLM chatbot designed for the Turing Game. It uses the Four-Sides model to make informed simulations of chats to achieve human-like behavior."
authors = [
    {name = "sbergsmann",email = "sbergsmann@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "turing-bot-client @ git+https://github.com/SCCH-Nessler/TuringBotClient.git",
    "openai (>=1.63.0,<2.0.0)",
    "websockets (>=14.2,<15.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
numpy = "^2.2.3"
matplotlib = "^3.10.1"

[tool.ruff]
indent-width = 4
line-length = 110
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"