[project]
name = "fourmind"
version = "1.1.1"
description = "FourMind is a chat bot developed for the Turing Game, designed to advance AI indistinguishability in competitive, multi-user chat environments"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "openai>=1.76.2",
    "turing-bot-client",
    "websockets>=15.0.1",
]

[tool.uv.sources]
turing-bot-client = { git = "https://github.com/SCCH-Nessler/TuringBotClient.git" }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.7",
]

[project.scripts]
fourmind = "fourmind.bot.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["I"]
