[project]
name = "fourmind"
version = "2.0.0"
description = "FourMind is a chat bot developed for the Turing Game, designed to advance AI indistinguishability in competitive, multi-user chat environments"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "openai>=1.76.2",
    "turing-bot-client>=0.0.4.post3",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.3.2",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.7",
    "scikit-learn>=1.7.2",
    "sentence-transformers<=5.1.1",
    "torch>=2.8.0",
    "transformers==4.35.2",
]

[project.scripts]
fourmind = "fourmind.bot.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["I"]
